--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
 </head>
 
 <body>
-    <p>XXXXXXXXXX</p>
+    <div class="header">
+        <div class="logo">
+            <img src="img/logo.svg" alt="株式会社XXX">
+            <p>XXXXXXXXXX</p>
+        </div>
+        <ul>
+            <li><a href="">トップ</a></li>
+            <li><a href="">トピックス</a></li>
+            <li><a href="">事業内容</a></li>
+            <li><a href="">事例紹介</a></li>
+            <li><a href="">アクセス</a></li>
+            <li><a href="">お問い合わせ</a></li>
+        </ul>
+    </div>
+    <div class="header_image">
+        <img src="img/header.png" alt="">
+    </div>
+
+
+
+
 </body>
 
 </html>
