--- a/index.html
+++ b/index.html
@@ -11,26 +11,25 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="logo">
-            <img src="img/logo.svg" alt="株式会社XXX">
-            <p>XXXXXXXXXX</p>
+    <div class="background">
+        <div class="topimg">
+            <img src="img/IMG_8337.jpg" alt="oki ikuto">
+            <p>大木 郁登</p>
         </div>
-        <ul>
-            <li><a href="">トップ</a></li>
-            <li><a href="">トピックス</a></li>
-            <li><a href="">事業内容</a></li>
-            <li><a href="">事例紹介</a></li>
-            <li><a href="">アクセス</a></li>
-            <li><a href="">お問い合わせ</a></li>
-        </ul>
-    </div>
-    <div class="header_image">
-        <img src="img/header.png" alt="">
     </div>
 
+    <div class="time">▪Now</div>
+        <div class="one">・筑波大学 理工情報生命学術院 システム情報工学研究群 知能機能システム学位プログラム</div>
+        <!-- <nobr class="one">・</nobr> -->
+        <p class="one">・<a href="http://www.image.iit.tsukuba.ac.jp/" target="_blank" rel="noopener">画像情報研究室</a> 修士2年</p>
+        <!-- <div class="one">・画像情報研究室修士2年</div> -->
+        <div class="one">・株式会社Ridge-i intern</div>
 
-
+    <div class="time">▪Next</div>
+        <div class="one">・株式会社NTTデータ</div>
+    <div class="time">▪Past</div>
+        <div class="one">・筑波大学 理工学群 工学システム学類</div>
+        <div class="one">・東葛飾高等学校</div>
 
 </body>
 
