change top name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="background">
         <div class="topimg">
             <img src="img/IMG_8337.jpg" alt="oki ikuto">
-            <p>大木 郁登</p>
+            <p>IKUTO OKI's PORTFOLIO</p>
         </div>
     </div>
 
