--- a/index.html
+++ b/index.html
@@ -11,26 +11,38 @@
 </head>
 
 <body>
-    <div class="background">
-        <div class="topimg">
-            <img src="img/IMG_8337.jpg" alt="oki ikuto">
-            <p>IKUTO OKI's PORTFOLIO</p>
+    <header>
+        <h1>IKUTO OKI</h1>
+        <nav class="gnav">
+            <ul class="menu">
+                <li><a href="">About</a></li>
+                <li><a href="">Career</a></li>
+                <li><a href="">Publications</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div class="background">
+            <div class="topimg">
+                <img src="img/IMG_8337.jpg" alt="oki ikuto">
+                <p>IKUTO OKI's PORTFOLIO</p>
+            </div>
         </div>
-    </div>
+        <div class="time">▪Now</div>
+            <div class="one">・筑波大学 理工情報生命学術院 システム情報工学研究群 知能機能システム学位プログラム</div>
+            <!-- <nobr class="one">・</nobr> -->
+            <p class="one">・<a href="http://www.image.iit.tsukuba.ac.jp/" target="_blank" rel="noopener">画像情報研究室</a> 修士2年</p>
+            <!-- <div class="one">・画像情報研究室修士2年</div> -->
+            <div class="one">・株式会社Ridge-i intern</div>
 
-    <div class="time">▪Now</div>
-        <div class="one">・筑波大学 理工情報生命学術院 システム情報工学研究群 知能機能システム学位プログラム</div>
-        <!-- <nobr class="one">・</nobr> -->
-        <p class="one">・<a href="http://www.image.iit.tsukuba.ac.jp/" target="_blank" rel="noopener">画像情報研究室</a> 修士2年</p>
-        <!-- <div class="one">・画像情報研究室修士2年</div> -->
-        <div class="one">・株式会社Ridge-i intern</div>
-
-    <div class="time">▪Next</div>
-        <div class="one">・株式会社NTTデータ</div>
-    <div class="time">▪Past</div>
-        <div class="one">・筑波大学 理工学群 工学システム学類</div>
-        <div class="one">・東葛飾高等学校</div>
-
+        <div class="time">▪Next</div>
+            <div class="one">・株式会社NTTデータ</div>
+        <div class="time">▪Past</div>
+            <div class="one">・筑波大学 理工学群 工学システム学類</div>
+            <div class="one">・東葛飾高等学校</div>
+    </main>
 </body>
 
 </html>
