--- a/index.html
+++ b/index.html
@@ -30,18 +30,19 @@
                 <p>IKUTO OKI's PORTFOLIO</p>
             </div>
         </div>
-        <div class="time">▪Now</div>
-            <div class="one">・筑波大学 理工情報生命学術院 システム情報工学研究群 知能機能システム学位プログラム</div>
-            <!-- <nobr class="one">・</nobr> -->
-            <p class="one">・<a href="http://www.image.iit.tsukuba.ac.jp/" target="_blank" rel="noopener">画像情報研究室</a> 修士2年</p>
-            <!-- <div class="one">・画像情報研究室修士2年</div> -->
-            <div class="one">・株式会社Ridge-i intern</div>
 
-        <div class="time">▪Next</div>
-            <div class="one">・株式会社NTTデータ</div>
+        <div class="time">▪Now</div>
+            <div class="one">・株式会社NTTデータ 技術革新統括本部 Data&Inteligence技術部</div>
+                    <div class="period">2023.4 -</div>
         <div class="time">▪Past</div>
+            <div class="one">・筑波大学 理工情報生命学術院 システム情報工学研究群 知能機能システム学位プログラム</div>
+                <div class="period">2021.4 - 2023.3</div>
+            <p class="one">・<a href="http://www.image.iit.tsukuba.ac.jp/" target="_blank" rel="noopener">画像情報研究室</a></p>
+                <div class="period">2020.4 - 2023.3</div>
+            <div class="one">・株式会社Ridge-i（インターン）</div>
+                <div class="period">2021.1 - 2022.12</div>
             <div class="one">・筑波大学 理工学群 工学システム学類</div>
-            <div class="one">・東葛飾高等学校</div>
+                <div class="period">2017.4 - 2021.3</div>
     </main>
 </body>
 
